--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="chat-input" type="text" placeholder="اكتب رسالتك هنا..." style="width: 70%; padding: 10px;">
     <button onclick="sendMsg()" style="padding: 10px; background: gold; border: none; cursor: pointer;">إرسال</button>
 
-    <script>
+    <button onclick="activateKing()" style="background:red; color:white;">تفعيل هيبة الملك 👑</button>    <script>
         // ربط السيرفر
         const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
         firebase.initializeApp(firebaseConfig);
