--- a/index.html
+++ b/index.html
@@ -1,92 +1,15 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <title>👑 مملكة علوش الأسطورية 👑</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <style>
-        body { background: radial-gradient(circle, #1a1a1a, #000); color: gold; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; margin: 0; overflow: hidden; }
-        #royal-header { background: linear-gradient(to bottom, #d4af37, #8a6d3b); color: #000; padding: 10px; font-weight: bold; font-size: 24px; box-shadow: 0 5px 15px rgba(0,0,0,0.5); }
-        #stats-bar { display: flex; justify-content: space-around; background: rgba(255,215,0,0.1); padding: 5px; border-bottom: 1px solid gold; }
-        #chat-screen { height: 60vh; overflow-y: auto; background: rgba(0,0,0,0.8); border: 3px double gold; margin: 20px auto; width: 90%; padding: 15px; border-radius: 15px; text-align: left; box-shadow: inset 0 0 20px gold; }
-        .msg { margin-bottom: 10px; border-bottom: 1px dashed #333; padding: 5px; animation: fadeIn 0.5s; }
-        .king-style { color: gold; font-weight: bold; text-shadow: 0 0 10px gold; }
-        #input-area { position: fixed; bottom: 20px; width: 100%; }
-        input { width: 60%; padding: 15px; border-radius: 25px; border: 2px solid gold; background: #222; color: #fff; outline: none; }
-        button { padding: 15px 30px; border-radius: 25px; border: none; background: gold; color: #000; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        button:hover { background: #fff; transform: scale(1.1); }
-        #youtube-player { position: absolute; top: 70px; right: 20px; width: 200px; height: 150px; border: 2px solid gold; border-radius: 10px; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-    </style>
-</head>
-<body>
+<div id="youtube-section" style="position: absolute; top: 70px; right: 20px; width: 220px;">
+    <input id="video-id" type="text" placeholder="ضع رابط الفيديو هنا..." style="width: 80%; padding: 5px; font-size: 12px; border-radius: 5px;">
+    <button onclick="playVideo()" style="padding: 5px; font-size: 10px; margin-top: 5px;">تشغيل 🎬</button>
+    <iframe id="youtube-player" width="200" height="150" src="" frameborder="0" allowfullscreen style="margin-top:10px; border: 2px solid gold; border-radius: 10px;"></iframe>
+</div>
 
-    <div id="royal-header">👑 مملكة علوش: الإصدار 70 👑</div>
-    
-    <div id="stats-bar">
-        <span>الزوار الآن: <b id="visitor-count">1</b></span>
-        <span>الحماية: <b style="color: lime;">مفعلة ✅</b></span>
-        <span>الموقع: <b style="color: cyan;">عالمي 🌍</b></span>
-    </div>
-
-    <iframe id="youtube-player" src="https://www.youtube.com/embed/live_stream?channel=UC-9-kyTW8DZMz-976vL-T6g&autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
-
-    <div id="chat-screen"></div>
-    
-    <div id="input-area">
-        <input id="chat-input" type="text" placeholder="اكتب رسالتك الملكية هنا...">
-        <button onclick="sendMsg()">إرسال ✨</button>
-        <button id="king-btn" onclick="activateKing()" style="background:red; color:white; display:none;">تفعيل التاج 👑</button>
-    </div>
-
-    <script>
-        const firebaseConfig = { databaseURL: "https://alloush-kingdom-default-rtdb.firebaseio.com" };
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        // إظهار زر الملك إذا لم يكن مفعلاً
-        if(localStorage.getItem("is_king") !== "true") {
-            document.getElementById('king-btn').style.display = 'inline-block';
-        }
-
-        function activateKing() {
-            localStorage.setItem("is_king", "true");
-            alert("تم تفعيل البصمة الملكية بجهازك يا ملك علوش! 👑");
-            location.reload();
-        }
-
-        function sendMsg() {
-            let input = document.getElementById('chat-input');
-            let isKing = localStorage.getItem("is_king") === "true";
-            let user = isKing ? "👑 علوش" : "زائر";
-            let rank = isKing ? "ملك المملكة" : "مواطن";
-
-            if(input.value.trim() !== "") {
-                db.ref("messages").push().set({
-                    user: user,
-                    text: input.value,
-                    rank: rank,
-                    isKing: isKing
-                });
-                input.value = "";
-            }
-        }
-
-        db.ref("messages").on("child_added", (snapshot) => {
-            let msg = snapshot.val();
-            let style = msg.isKing ? 'king-style' : '';
-            document.getElementById('chat-screen').innerHTML += `
-                <div class="msg">
-                    <span class="${style}">[${msg.rank}] ${msg.user}:</span> ${msg.text}
-                </div>`;
-            document.getElementById('chat-screen').scrollTop = document.getElementById('chat-screen').scrollHeight;
-        });
-
-        // عداد زوار وهمي ذكي
-        setInterval(() => {
-            document.getElementById('visitor-count').innerText = Math.floor(Math.random() * 5) + 1;
-        }, 5000);
-    </script>
-</body>
-</html>
+<script>
+function playVideo() {
+    let url = document.getElementById('video-id').value;
+    let videoId = url.split('v=')[1] || url.split('/').pop();
+    if(videoId) {
+        document.getElementById('youtube-player').src = "https://www.youtube.com/embed/" + videoId + "?autoplay=1";
+    }
+}
+</script>
